package com.xuan.xutils.design.filter;

/**
 * @author xuan
 * @since 2023/3/6
 */
public interface SayHelloFilter {

    Response handle(Request request);
}
